# universal-tts

./: .gitignore  ASSIMILATION.engine-provisioning.json  ASSIMILATION_LOG.jsonl  ASSIMILATION_LOG.md  README.md  config.yaml  pyproject.toml  run.sh
scripts/: benchmark_ttfb.py
sidecars/: cosyvoice3_server.py  cosyvoice3_sidecar.sh  fish_s2_server.py  fish_s2_sidecar.sh  higgs_v3_mlx_server.py  higgs_v3_mlx_sidecar.sh  higgs_v3_server.py  higgs_v3_sidecar.sh  kitten_server.py  kitten_sidecar.sh  kokoro_server.py  kokoro_sidecar.sh  tts_audio_suite_catalog_server.py  tts_audio_suite_catalog_sidecar.sh
sidecars/qwen3-mlx/: server.py  voice01_fast_profile.json
src/universal_tts/: app.py  audio.py  config.py  lifecycle.py  memory.py  platforms.py  provisioning.py  queue.py  registry.py  srt.py  voice_library.py
src/universal_tts/providers/: base.py  http_backed.py  kitten.py
tests/: test_app_streaming.py  test_core.py  test_cosyvoice3.py  test_fish_s2.py  test_higgs_v3.py  test_higgs_v3_mlx.py  test_http_batch_provider.py  test_kitten.py  test_kitten_int16_scaling.py  test_kokoro.py  test_microbatch_scheduler.py  test_provider_load_wait.py  test_sidecar_keepalive.py  test_stream_watchdog.py  test_streaming.py  test_tts_audio_suite_candidates.py  test_universal_features.py  test_voice_library.py
